# virtuoso-bridge-lite

./: AGENTS.md  launch_mcp.sh  pyproject.toml  setup.sh
docs/: CNAME
docs/superpowers/plans/: 2026-04-09-dismiss-dialog.md
examples/01_virtuoso/digital_import/: import_gds.py  restyle_labels.py
skills/virtuoso/references/: troubleshooting.md
src/virtuoso_bridge/: __init__.py  cli.py
src/virtuoso_bridge/mcp/: __main__.py  cli.py  log_writer.py  server.py  tools.py
src/virtuoso_bridge/mcp/resources/: mcp_gui.il
src/virtuoso_bridge/resources/: .env_template
src/virtuoso_bridge/transport/: remote_paths.py  ssh.py
src/virtuoso_bridge/virtuoso/: ops.py  x11.py
src/virtuoso_bridge/virtuoso/basic/: bridge.py
src/virtuoso_bridge/virtuoso/basic/resources/: ramic_bridge.il  ramic_bridge_daemon_27.py  ramic_bridge_daemon_3.py
src/virtuoso_bridge/virtuoso/layout/: ops.py
src/virtuoso_bridge/virtuoso/maestro/: lifecycle.py
src/virtuoso_bridge/virtuoso/maestro/reader/: runs.py
src/virtuoso_bridge/virtuoso/schematic/: editor.py  reader.py
stats/: README.md  clones-badge.json  clones.json  views-badge.json  views.json
