[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "virtuoso-bridge"
version = "0.7.0"
description = "Lightweight Python bridge for Cadence Virtuoso SKILL execution and Spectre simulation"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Schematic → Visio export (`virtuoso-bridge export-visio`).  Drives
# Microsoft Visio via COM, Windows-only.  The pure model layer in
# `virtuoso/visio.py` has no extra deps and stays importable everywhere.
visio = ["pywin32; sys_platform == 'win32'"]
# MCP server (`virtuoso-bridge-mcp init` + `python -m virtuoso_bridge.mcp`)
mcp = ["mcp>=1.0"]

[project.scripts]
virtuoso-bridge = "virtuoso_bridge.cli:main"
virtuoso-bridge-mcp = "virtuoso_bridge.mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"virtuoso_bridge.resources" = [".env_template"]
"virtuoso_bridge.virtuoso.basic.resources" = ["*.il", "*.py"]
"virtuoso_bridge.virtuoso.maestro" = ["*.yaml"]
"virtuoso_bridge.mcp.resources" = ["*.il"]
